# gem-hub-backend

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main_gem-hub.yml
apps/core/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/core/authentication/: supabase_auth.py
apps/core/management/commands/: seed_all.py
apps/core/middlewares/: logging.py  supabase_auth.py
apps/core/migrations/: 0001_initial.py  0002_alter_notification_user_alter_profile_profile_id.py  0002_alter_notification_user_id.py  0003_profile.py  0003_profile_role.py
apps/gems/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/gems/migrations/: 0001_initial.py  0002_alter_gemlisting_owner.py  0002_alter_gemlisting_owner_id.py  0002_gemlisting_color_gemlisting_variety.py  0003_gemlisting_weight.py  0004_remove_gemlisting_weight.py  0005_gemlisting_certificate_url.py
apps/jobs/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/jobs/migrations/: 0001_initial.py  0002_alter_application_applicant_id_alter_job_employer_id.py  0002_alter_application_job_alter_job_employer.py  0003_alter_application_expected_salary_alter_job_salary.py
config/: settings.py  urls.py
